--- a/SistemaFinanceiro/SistemaFinanceiro.csproj
+++ b/SistemaFinanceiro/SistemaFinanceiro.csproj
@@ -11,12 +11,32 @@
 
   <ItemGroup>
     <Compile Remove="DarkComboBox.cs" />
+    <Compile Remove="Views\FormCadastroTecnico.cs" />
+    <Compile Remove="Views\FormCadastroTecnico.Designer.cs" />
+    <Compile Remove="Views\FormGerenciarTecnicos.cs" />
+    <Compile Remove="Views\TelaLixeira.cs" />
+    <Compile Remove="Views\TelaLixeira.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
